-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u131, 9, 10
-
Component/s: hotspot
-
b21
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f121b310b0a, pid=10616, tid=10634
#
# JRE version: Java(TM) SE Runtime Environment (10.0) (fastdebug build 10-internal+0-adhoc.tohartma.hs10)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 10-internal+0-adhoc.tohartma.hs10, compiled mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x778b0a] CFGPrinterOutput::print_LIR(BlockBegin*)+0x2a
Current CompileTask:
C1: 1128 245 b 1 jdk.internal.misc.InnocuousThread::run (24 bytes)
Stack: [0x00007f11b7eff000,0x00007f11b8000000], sp=0x00007f11b7ffe0c0, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x778b0a] CFGPrinterOutput::print_LIR(BlockBegin*)+0x2a
V [libjvm.so+0x77a2e8] CFGPrinterOutput::print_block(BlockBegin*)+0x6f8
V [libjvm.so+0x7d6775] BlockBegin::iterate_preorder(GrowableArray<bool>&, BlockClosure*)+0xd5
V [libjvm.so+0x7d6880] BlockBegin::iterate_preorder(GrowableArray<bool>&, BlockClosure*)+0x1e0
V [libjvm.so+0x7d6cf0] BlockBegin::iterate_preorder(BlockClosure*)+0x170
V [libjvm.so+0x7784bb] CFGPrinter::print_cfg(IR*, char const*, bool, bool)+0x6b
V [libjvm.so+0x7907f3] Compilation::build_hir() [clone .part.115]+0x6c3
V [libjvm.so+0x796008] Compilation::compile_java_method() [clone .part.116]+0xbf8
V [libjvm.so+0x7966c7] Compilation::compile_method()+0x247
V [libjvm.so+0x797263] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, DirectiveSet*)+0x433
V [libjvm.so+0x7991de] Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x17e
V [libjvm.so+0xaaebd8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x418
V [libjvm.so+0xaaf961] CompileBroker::compiler_thread_loop()+0x2b1
V [libjvm.so+0x173e66e] JavaThread::thread_main_inner()+0x22e
V [libjvm.so+0x173ebce] JavaThread::run()+0x1ce
V [libjvm.so+0x1471742] thread_native_entry(Thread*)+0x112
C [libpthread.so.0+0x8184] start_thread+0xc4
#
# SIGSEGV (0xb) at pc=0x00007f121b310b0a, pid=10616, tid=10634
#
# JRE version: Java(TM) SE Runtime Environment (10.0) (fastdebug build 10-internal+0-adhoc.tohartma.hs10)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 10-internal+0-adhoc.tohartma.hs10, compiled mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x778b0a] CFGPrinterOutput::print_LIR(BlockBegin*)+0x2a
Current CompileTask:
C1: 1128 245 b 1 jdk.internal.misc.InnocuousThread::run (24 bytes)
Stack: [0x00007f11b7eff000,0x00007f11b8000000], sp=0x00007f11b7ffe0c0, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x778b0a] CFGPrinterOutput::print_LIR(BlockBegin*)+0x2a
V [libjvm.so+0x77a2e8] CFGPrinterOutput::print_block(BlockBegin*)+0x6f8
V [libjvm.so+0x7d6775] BlockBegin::iterate_preorder(GrowableArray<bool>&, BlockClosure*)+0xd5
V [libjvm.so+0x7d6880] BlockBegin::iterate_preorder(GrowableArray<bool>&, BlockClosure*)+0x1e0
V [libjvm.so+0x7d6cf0] BlockBegin::iterate_preorder(BlockClosure*)+0x170
V [libjvm.so+0x7784bb] CFGPrinter::print_cfg(IR*, char const*, bool, bool)+0x6b
V [libjvm.so+0x7907f3] Compilation::build_hir() [clone .part.115]+0x6c3
V [libjvm.so+0x796008] Compilation::compile_java_method() [clone .part.116]+0xbf8
V [libjvm.so+0x7966c7] Compilation::compile_method()+0x247
V [libjvm.so+0x797263] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, DirectiveSet*)+0x433
V [libjvm.so+0x7991de] Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x17e
V [libjvm.so+0xaaebd8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x418
V [libjvm.so+0xaaf961] CompileBroker::compiler_thread_loop()+0x2b1
V [libjvm.so+0x173e66e] JavaThread::thread_main_inner()+0x22e
V [libjvm.so+0x173ebce] JavaThread::run()+0x1ce
V [libjvm.so+0x1471742] thread_native_entry(Thread*)+0x112
C [libpthread.so.0+0x8184] start_thread+0xc4