8181644: C1 crashes with -XX:+PrintCFGToFile

CFGPrinterOutput should not be shared between C1 compiler threads.

Reviewed-by: kvn